name:                artery
version:             0.1.2
synopsis:            A simple, arrow-based reactive programming
description:         This package only provides Artery type and associated operations.
homepage:            https://github.com/fumieval/artery
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
copyright:           Copyright (C) 2013 Fumiaki Kinoshita
category:            Control, FRP
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Control.Artery
  -- other-modules:
  other-extensions:    Rank2Types
  ghc-location: ghc
  build-depends:
    base,
    containers,
    profunctors,
    transformers
  -- hs-source-dirs:
  default-language:    Haskell2010
